input, output用ディレクトリはgitignore対象としないように変更

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ ENV/
 # Project specific
 data/audio_files/*
 data/output/*
+!data/audio_files/
+!data/output/
 !data/audio_files/.gitkeep
 !data/output/.gitkeep
 transcription_result.txt
